# ********************************************************************
# CMakeLists for anxi
# file: CMakeLists.txt
# author: hhool
# date: 2024-08-14
# ********************************************************************

cmake_minimum_required(VERSION 3.0)

project(examples LANGUAGES CXX)

add_subdirectory(console)